--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .ipynb_checkpoints
 chapter1/data/*
 chapter2/data/MNIST/raw/train-images-idx3-ubyte.gz
+chapter3/data/MNIST/raw/t10k-images-idx3-ubyte.gz
+chapter3/data/MNIST/raw/t10k-labels-idx1-ubyte.gz
+chapter3/data/MNIST/raw/train-images-idx3-ubyte.gz
+chapter3/data/MNIST/raw/train-labels-idx1-ubyte.gz
